force-app/main/default/objects/Hito_de_facturacion__c/Hito_de_facturacion__c.object-meta.xml
<CustomObject>
    <label>Hito de facturación</label>
    <nameField>
        <label>Nombre del hito de facturación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hito de facturación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>