force-app/main/default/objects/Hito_de_facturacion__c/fields/EsLL__c.field-meta.xml
<CustomField>
    <fullName>EsLL__c</fullName>
    <formula>Linea_de_Proyecto__r.Nombre_Tipo_Registro__c ==&apos;Llave en Mano&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsLL</label>
    <type>Checkbox</type>
</CustomField>