force-app/main/default/objects/Hito_de_facturacion__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <label>Importe</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>