force-app/main/default/objects/Hito_de_facturacion__c/fields/Linea_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Línea de Proyecto</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Hitos de facturación</relationshipLabel>
    <relationshipName>Hitos_de_facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>