force-app/main/default/objects/Hito_de_facturacion__c/fields/LL__c.field-meta.xml
<CustomField>
    <fullName>LL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LL</label>
    <type>Checkbox</type>
</CustomField>