force-app/main/default/objects/Hito_de_facturacion__c/fields/OppCode__c.field-meta.xml
<CustomField>
    <fullName>OppCode__c</fullName>
    <label>OppCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>