force-app/main/default/objects/Hito_de_facturacion__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Porcentaje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>