force-app/main/default/objects/Hito_de_facturacion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Importe</fullName>
            </value>
            <value>
                <fullName>Por Porcentaje</fullName>
                <label>Por porcentaje</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>